--- a/index.html
+++ b/index.html
@@ -101,14 +101,14 @@
                         <section id="about">
                             <div class="section-content">
                                 <h2>About</h2>
-                                <p>Hello Everyone! I am BCA student</p>
+                                <p>Hello Everyone! I am Bachelor of Computer Applications student</p>
                             </div>
                         </section>
 
                         <section id="education">
                             <div class="section-content">
                                 <h2>Education</h2>
-                                <p>Shree Raghavendra Arts and Science collge-Bachalor of Computer Application</p>
+                                <p>Shree Raghavendra Arts and Science college-Bachelor of Computer Applications</p>
                                                                                           
                             </div>
 
@@ -118,7 +118,10 @@
                             <div class="section-content">
                                 <h2>Skills</h2>
                                 <ul>
-                                    <li>C Program</li>
+                                    <li>C</li> 
+                                    <li>C++</li>
+                                    <li>Java</li>
+                                        
                                 </ul>
                             </div>
                         </section>
@@ -136,6 +139,7 @@
                             <div class="section-content">
                                 <center>
                                     <h2>Resume</h2>
+                                    <a href="./resume.pdf" target="_blank" class="downloadCD</a>
                                 </center>                                                                                                                                                                                                                                                                                                                                                                
                             </div>
                         </section> 
